# QuickDash

./: Cargo.toml
.github/workflows/: coverage.yml  crates.yml  rust.yml
src/: algorithms.rs  error.rs  lib.rs  main.rs  options.rs  utilities.rs
src/hashing/: blake2b.rs  blake2s.rs  blake3.rs  crc32.rs  md5.rs  mod.rs  sha1.rs  sha2_224.rs  sha2_256.rs  sha2_384.rs  sha2_512.rs  sha3_224.rs  sha3_256.rs  sha3_384.rs  sha3_512.rs  whirlpool.rs  xxh3.rs  xxh32.rs  xxh64.rs
src/operations/: compare.rs  mod.rs  optimize_file_order.rs  write.rs
